--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "70661fd1-6cab-4f26-9c7f-75ac4830d362"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
